# onsapi

./: .gitignore  README.md  example.py  pyproject.toml
src/onsapi/: OnsApiClient.py  OnsDataList.py  OnsDataset.py  OnsDatasetList.py  __init__.py  list_datasets.py  utils.py
tests/: test_OnsApiClient.py
